--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,15 +61,14 @@ a {
   @apply from-primary-50 to-primary-100;
 }
 .scrollbar-hide {
-  -ms-overflow-style: none;  /* Internet Explorer 10+ */
-  scrollbar-width: none;  /* Firefox */
+  -ms-overflow-style: none;  
+  scrollbar-width: none;  
 }
 
 .scrollbar-hide::-webkit-scrollbar {
-  display: none;  /* Safari and Chrome */
+  display: none; 
 }
 
-/* Optional: Smooth scrolling behavior */
 .scrollbar-hide {
   scroll-behavior: smooth;
 }
